unpackaged/main/default/objects/Web_Form__c/Web_Form__c.object-meta.xml
<CustomObject>
    <description>Collects Daddy Analytics data each time a Lead fills out a web form.</description>
    <label>Web Form</label>
    <nameField>
        <displayFormat>WF-{00000}</displayFormat>
        <label>Web Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>