unpackaged/main/default/objects/Web_Form__c/fields/DA_Came_From__c.field-meta.xml
<CustomField>
    <fullName>DA_Came_From__c</fullName>
    <description>Pulls data from DA Came From field on Lead Object.</description>
    <label>DA Came From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>