unpackaged/main/default/objects/Web_Form__c/fields/DA_Campaign_Medium__c.field-meta.xml
<CustomField>
    <fullName>DA_Campaign_Medium__c</fullName>
    <description>Pulls data from DA Campaign Medium field on Lead Object.</description>
    <label>DA Campaign Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>