unpackaged/main/default/objects/Web_Form__c/fields/DA_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>DA_Campaign_Name__c</fullName>
    <description>Pulls data from DA Campaign Name field on Lead Object.</description>
    <label>DA Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>