unpackaged/main/default/objects/Web_Form__c/fields/DA_Campaign_Term__c.field-meta.xml
<CustomField>
    <fullName>DA_Campaign_Term__c</fullName>
    <description>Pulls data from DA Form Submitted field on Lead Object.</description>
    <label>DA Campaign Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>