unpackaged/main/default/objects/Web_Form__c/fields/DA_ISP_Listed_As__c.field-meta.xml
<CustomField>
    <fullName>DA_ISP_Listed_As__c</fullName>
    <description>Pulls data from DA ISP Listed As field on Lead Object.</description>
    <label>DA ISP Listed As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>