unpackaged/main/default/objects/Web_Form__c/fields/DA_Landed_On__c.field-meta.xml
<CustomField>
    <fullName>DA_Landed_On__c</fullName>
    <description>Pulls data from DA Landed On field on Lead Object.</description>
    <label>DA Landed On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>