unpackaged/main/default/objects/Web_Form__c/fields/DA_Searched_For__c.field-meta.xml
<CustomField>
    <fullName>DA_Searched_For__c</fullName>
    <description>Pulls data from DA Searched For field on Lead Object.</description>
    <label>DA Searched For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>