unpackaged/main/default/objects/Web_Form__c/fields/DA_Token__c.field-meta.xml
<CustomField>
    <fullName>DA_Token__c</fullName>
    <description>Pulls data from DA Token field on Lead Object.</description>
    <label>DA Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>