unpackaged/main/default/objects/Web_Form__c/fields/DoubleClick_gclid__c.field-meta.xml
<CustomField>
    <fullName>DoubleClick_gclid__c</fullName>
    <label>DoubleClick gclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>