unpackaged/main/default/objects/Web_Form__c/fields/DoubleClick_gclsrc__c.field-meta.xml
<CustomField>
    <fullName>DoubleClick_gclsrc__c</fullName>
    <label>DoubleClick gclsrc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>