unpackaged/main/default/objects/Web_Form__c/fields/DoubleClick_utm_medium__c.field-meta.xml
<CustomField>
    <fullName>DoubleClick_utm_medium__c</fullName>
    <label>DoubleClick utm_medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>