unpackaged/main/default/objects/Web_Form__c/fields/DoubleClick_utm_term__c.field-meta.xml
<CustomField>
    <fullName>DoubleClick_utm_term__c</fullName>
    <label>DoubleClick utm_term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>