unpackaged/main/default/objects/Web_Form__c/fields/Form_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Date__c</fullName>
    <description>Pulls data from DA Visit Time field on Lead Object.</description>
    <label>DA Visit Time</label>
    <type>DateTime</type>
</CustomField>