unpackaged/main/default/objects/Web_Form__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Lead who completed the web form search.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Web Forms</relationshipLabel>
    <relationshipName>Web_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>